[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/hud/hud_action_reward_screen.png" type="Texture" id=1]
[ext_resource path="res://Entities/HUD/Quest_Completion_Window.gd" type="Script" id=2]
[ext_resource path="res://Entities/HUD/Assets/Item_Get_Sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Misc/quest_icon.png" type="Texture" id=4]
[ext_resource path="res://Entities/HUD/Assets/quest_completion_fanfare.wav" type="AudioStream" id=5]

[node name="Quest_Completion_Window" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Quest_Completion_Window_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Quest_Icon_Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Item_Get_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0

[node name="Quest_Completion_Fanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
